--- a/todo
+++ b/todo
@@ -1,3 +1,2 @@
 TODO:
-1 - FIX HEADER ON MOBILE (coś jest nie tak z tym komponentem pomagającym)
-2 - FIX WISHLISH ON DESKTOP
+1 - FIX WISHLISH ON DESKTOP (can't see icon)
