--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,2 @@
-// add skeleton or something while fetching component with carousel
-
-  //TODO - Move this to relevant component (premiere games)
-
-  const PREMIERE_GAMES_URL = `${BASE_URL}?dates=${getNextDay()},2024-12-31&ordering=-rating&key=${API_KEY}`;
-  console.log(PREMIERE_GAMES_URL);
-
-  import { getNextDay } from 'utils/helpers/getNextDay';
-import { API_KEY, BASE_URL } from 'utils/constans';
-////////////////////////////////////////////////////////////////////////
-/dla obu tych komponentów ustaw za pomocą tailwindcss transition na pojawianie i znikanie, oraz poprawić żeby to miało idealne wymiary
-
-// problem z top 100 games na różnych przeglądarkach, może wyjebać to z absoluta
+1) When one of the components disappears from the react query do some animation between component appearances
+2) 
