add cache time on all queries

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,137 @@
 1) remember of handling error components
 2) url with gamename not with id
-3) jak nie ma opisu gry to troche lipnie to wygląda
+3) galery component / multiple requests 
+muszę do tego kodu dodać do react query 3 kolejne requesty żeby uzyskać dane z tych 3 endpointów: 
+/{id}/screenshots
+/{id}/additions 
+/{id}/game-series
+
+export const API_KEY = '76cb8b2b755e459baa2b0262c9aadfef';
+export const BASE_URL = 'https://api.rawg.io/api/games';
+
+import { useParams } from 'react-router-dom';
+import { useQuery } from '@tanstack/react-query';
+import axios from 'axios';
+import { API_KEY, BASE_URL } from 'utils/constans';
+import PageBackgroundImage from 'components/PageBackgroundImage';
+import PageGameHeader from 'components/PageGameHeader';
+import Metacritic from 'components/Metacritic';
+import GameDescription from 'components/GameDescription';
+import GameURLS from 'components/GameURLS';
+import Stores from 'components/Stores';
+import Genres from 'components/Genres';
+import GameTags from 'components/GameTags';
+
+const GameDetails = () => {
+  const { id } = useParams();
+
+  const { isLoading, error, data } = useQuery(['gameDetails', id], () =>
+    axios.get(`${BASE_URL}/${id}?key=${API_KEY}`).then((res) => res.data)
+  );
+
+  if (isLoading) {
+    return <div>Loading...</div>;
+  }
+
+  if (error) {
+    return <div>An error has occurred: {error.message}</div>;
+  }
+  console.log(data);
+  const {
+    name,
+    background_image: image,
+    playtime,
+    released,
+    parent_platforms: platforms,
+    description_raw: description,
+    metacritic,
+    genres,
+    stores,
+    reddit_url: reddit,
+    website,
+    tags,
+  } = data;
+
+  const justifyFlex = description !== '' ? 'justify-start' : 'justify-center';
+
+  return (
+    <div className='bg-[#151515] min-h-screen shadow-left relative pb-4'>
+      <div className='container relative z-10 flex flex-col items-center mx-auto mt-20 lg:mt-12'>
+        <PageGameHeader
+          released={released}
+          playtime={playtime}
+          platforms={platforms}
+          name={name}
+        />
+        <div
+          className={`flex flex-col w-full gap-2 px-4 mt-4 lg:gap-4 lg:mt-5 lg:flex-row ${justifyFlex}`}
+        >
+          <GameDescription desc={description} />
+          <div className='flex flex-wrap items-center content-start order-first gap-4 lg:order-last'>
+            <div className='flex items-center justify-center w-full gap-2 lg:flex-wrap xl:flex-nowrap lg:justify-start'>
+              <Metacritic meta={metacritic} />
+              <Genres genres={genres} />
+            </div>
+            <Stores stores={stores} />
+            <GameURLS website={website} reddit={reddit} />
+            <GameTags tags={tags} />
+          </div>
+        </div>
+      </div>
+      <PageBackgroundImage image={image} />
+    </div>
+  );
+};
+
+export default GameDetails;
+
+
+
+
+import { useQueries } from 'react-query';
+
+function GameDetails({ id }) {
+  const BASE_URL = 'https://api.rawg.io/api/games';
+  const API_KEY = process.env.REACT_APP_RAWG_API_KEY;
+
+  const queries = useQueries([
+    {
+      queryKey: ['gameDetails', id],
+      queryFn: () =>
+        axios.get(`${BASE_URL}/${id}?key=${API_KEY}`).then((res) => res.data),
+      cacheTime: 10 * 60 * 1000,
+      staleTime: 5 * 60 * 1000,
+    },
+    {
+      queryKey: ['gameScreenshots', id],
+      queryFn: () =>
+        axios
+          .get(`${BASE_URL}/${id}/screenshots?key=${API_KEY}`)
+          .then((res) => res.data.results),
+      cacheTime: 10 * 60 * 1000,
+      staleTime: 5 * 60 * 1000,
+    },
+    {
+      queryKey: ['gameTrailers', id],
+      queryFn: () =>
+        axios
+          .get(`${BASE_URL}/${id}/movies?key=${API_KEY}`)
+          .then((res) => res.data.results),
+      cacheTime: 10 * 60 * 1000,
+      staleTime: 5 * 60 * 1000,
+    },
+    {
+      queryKey: ['gameReviews', id],
+      queryFn: () =>
+        axios
+          .get(`${BASE_URL}/${id}/reviews?key=${API_KEY}`)
+          .then((res) => res.data.results),
+      cacheTime: 10 * 60 * 1000,
+      staleTime: 5 * 60 * 1000,
+    },
+  ]);
+
+  const [gameDetails, gameScreenshots, gameTrailers, gameReviews] = queries.map((query) => query.data);
+
+  // renderowanie komponentu
+}
