--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,7 @@ TODO: Galery Problems:
 ogarnąć miniaturki w fullscreen galerii
 
 http://localhost:3000/games/ - nic nie mam wtedy xD - po prostu dodać do routingu wtedy 404 ktore ma przekierować na homepage?
+
+opakować requesty w jeden
+
+- zrobić całą galerie pod rwd, a potem całe rwd na page sprawdzić bo coś sie rozpierdoliło chyba
