--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,5 @@ TODO:
 - po kliknięciu w cokolwiek jak jest refresh strony, niech przenosi do góry przeglądarki
 - go to top?
 https://medium.com/@rukeeojigbo/git-basics-an-idiots-guide-99445a56bd65
+
+http://localhost:3000/games/13535 - bug on xs with dlc
