small fixes for RWD

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,9 @@ TODO:
 https://medium.com/@rukeeojigbo/git-basics-an-idiots-guide-99445a56bd65
 
 http://localhost:3000/games/13535 - bug on xs with dlc
+
+
+//WISHLIST
+max 100 games or comunicate, buy premium
+filtering games by ?
+you dont know what buy first? let's roll (add spin animate and after 2sec throw popup with losed game)
