Add * route with error component

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,10 @@
 TODO:
 
 OVERALL
-- handle error&loading components [💥] 
+- handle error&loading components:
+* Gamedetails [✅]
+* Gallery, DLC isLoading, if error you don't have to show anything, because it doesn't broke app? 
+
 - url with gamename not with id [💥] 
 - http://localhost:3000/games/ - nic nie mam wtedy xD - po prostu dodać do routingu wtedy 404 ktore ma przekierować na homepage? [💥] 
 - opakować requesty w jeden [💥] 
