--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,1 @@
-
-- z-index on icons wishlist - test
-- go to top on mobile z - index
+https://dawidbugajski.github.io/gameworld/games/31495 - 550px, coś jest nie tak z ilością gier
